--- a/Lab15_1/Lab15_1.csproj
+++ b/Lab15_1/Lab15_1.csproj
@@ -39,9 +39,13 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Company.cs" />
+        <Compile Include="DoubleLinkedList.cs" />
+        <Compile Include="FileReader.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="SingleLinkedList.cs" />
+        <Compile Include="UniversityUnit.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
